<resources>
    <string name="app_name">MyTracker</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="workouts">Workouts</string>
    <string name="meals">Meals</string>
    <string name="profile">Profile</string>
    <string name="light_activity_desc">Light: \nThis activity level is suitable for individuals who engage in light physical activity or exercise occasionally, such as walking or light housework.</string>
    <string name="active_activity_desc">Active: \nThis activity level is suitable for individuals who engage in vigorous physical activity or exercise consistently, such as running, intense workouts, or competitive sports.</string>
    <string name="moderate_activity_desc">Moderate:  \nThis activity level is suitable for individuals who engage in moderate physical activity or exercise regularly, such as brisk walking, cycling, or recreational swimming.</string>
    <string name="sign_up">Sign up</string>
    <string name="bulk_desc">This option is ideal if you want to increase your muscle mass and overall weight. It focuses on strength training exercises and a calorie surplus diet to support muscle growth.</string>
    <string name="cut_desc">This option aims to improve your overall fitness level and reduce body fat percentage. It incorporates a combination of cardio and strength training exercises alongside a calorie deficit diet to promote healthy weight loss.</string>
    <string name="maintain_desc">This option helps you maintain your current weight and fitness level. It involves regular physical activity and a balanced diet to ensure you\'re consuming enough calories to sustain your energy needs.</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="enter_your_current_weight">Enter your current Weight</string>
    <string name="enter_your_height">Enter your Height</string>
    <string name="what_is_your_activity_level">What is your Activity Level</string>
    <string name="what_is_your_goal">What is your Goal</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>