<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/workoutsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/workouts"
        android:icon="@drawable/barbell"/>
    <item
        android:id="@+id/mealsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/meals"
        android:icon="@drawable/meals"/>

    <item
        android:id="@+id/profileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/profile"
        android:icon="@drawable/profile"/>
</menu>